[package]
name = "rust-chat"
version = "0.1.0"
authors = ["Tim <tim.mulqueen@gmail.com>"]

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "1.7.0"
serde_json = "0.9.7"
serde_derive = "1.0.35"
maud = "0.17.2"
diesel = { version = "1.0.0", features = ["postgres"] }